<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="applicationLabel">Contacts</string>
    <string name="contactsList">Contacts</string>
    <string name="shortcut_add_contact">Add contact</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose contact</string>
    <string name="contactInsertOrEditActivityTitle">Add to contact</string>
    <string name="contactPickerActivityTitle">Choose a contact</string>
    <string name="groupMemberPickerActivityTitle">Select</string>
    <string name="header_entry_contact_list_adapter_header_title">Create new contact</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_addStar">Add to favorites</string>
    <string name="menu_removeStar">Remove from favorites</string>
    <string name="description_action_menu_remove_star">Removed from favorites</string>
    <string name="description_action_menu_add_star">Added to favorites</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="menu_change_photo">Change photo</string>
    <string name="menu_create_contact_shortcut">Create shortcut</string>
    <string name="menu_splitAggregate">Unlink</string>
    <string name="menu_editGroup">Remove contacts</string>
    <string name="menu_renameGroup">Rename label</string>
    <string name="menu_deleteGroup">Delete label</string>
    <string name="menu_addToGroup">Add contact</string>
    <string name="menu_selectForGroup">Select contacts</string>
    <string name="menu_addContactsToGroup">Add contacts</string>
    <string name="menu_removeFromGroup">Remove from label</string>
    <string name="menu_new_group_action_bar">Create label</string>
    <string name="splitConfirmation">Unlink this contact into multiple contacts?</string>
    <string name="splitConfirmation_positive_button">Unlink</string>
    <string name="splitConfirmationWithPendingChanges">Would you like to save the changes you already made and unlink this contact into multiple contacts?</string>
    <string name="splitConfirmationWithPendingChanges_positive_button">Save and Unlink</string>
    <string name="joinConfirmation">Would you like to save the changes you already made and link with the contact selected?</string>
    <string name="joinConfirmation_positive_button">Save and Link</string>
    <string name="contacts_linking_progress_bar">Linking</string>
    <string name="contacts_unlinking_progress_bar">Unlinking</string>
    <string name="menu_joinAggregate">Link</string>
    <string name="menu_linkedContacts">View linked contacts</string>
    <string name="menu_save">Save</string>
    <string name="titleJoinContactDataWith">Link contacts</string>
    <string name="blurbJoinContactDataWith">Choose the contact you want to link with <xliff:g
        id="name">%s</xliff:g>:</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedNamedMessage"><xliff:g id="name">%s</xliff:g> linked</string>
    <string name="contactsJoinedMessage">Contacts linked</string>
    <string name="contacts_deleted_one_named_toast"><xliff:g id="name">%1$s</xliff:g> deleted</string>
    <string name="contacts_deleted_two_named_toast"><xliff:g id="name">%1$s</xliff:g> and <xliff:g id="name">%2$s</xliff:g> deleted</string>
    <string name="contacts_deleted_many_named_toast"><xliff:g id="name">%1$s</xliff:g>, <xliff:g id="name">%2$s</xliff:g>, <xliff:g id="name">%3$s</xliff:g>\u2026 deleted</string>
    <plurals name="contacts_deleted_toast">
        <item quantity="one">Contact deleted</item>
        <item quantity="other">Contacts deleted</item>
    </plurals>
    <plurals name="contacts_count">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> contact</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts</item>
    </plurals>
    <plurals name="contacts_count_with_account">
        <item quantity="one"><xliff:g id="count">%1$d</xliff:g> contact · <xliff:g id="account">%2$s</xliff:g></item>
        <item quantity="other"><xliff:g id="count">%1$d</xliff:g> contacts · <xliff:g id="account">%2$s</xliff:g></item>
    </plurals>
    <plurals name="contacts_count_match">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> contact match</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts match</item>
    </plurals>
    <plurals name="contacts_count_with_account_match">
        <item quantity="one"><xliff:g id="count">%1$d</xliff:g> contact match · <xliff:g id="account">%2$s</xliff:g></item>
        <item quantity="other"><xliff:g id="count">%1$d</xliff:g> contacts match · <xliff:g id="account">%2$s</xliff:g></item>
    </plurals>
    <string name="title_from_google">From Google</string>
    <string name="title_from_custom">From Custom</string>
    <string name="title_from_other_accounts">From <xliff:g id="account">%s</xliff:g></string>
    <string name="menu_set_ring_tone">Set ringtone</string>
    <string name="menu_redirect_calls_to_vm">Route to voicemail</string>
    <string name="menu_unredirect_calls_to_vm">Unroute to voicemail</string>
    <string name="readOnlyContactWarning">This contact is read-only. It can\'t be deleted, but you can hide it.</string>
    <string name="readOnlyContactWarning_positive_button">Hide Contact</string>
    <string name="readOnlyContactDeleteConfirmation">Read-only accounts in this contact will be hidden, not deleted.</string>
    <string name="single_delete_confirmation">Delete this contact?</string>
    <string name="batch_delete_confirmation">Delete selected contacts?</string>
    <string name="batch_delete_read_only_contact_confirmation">Contacts from your read-only accounts cannot be deleted, but they can be hidden.</string>
    <string name="batch_delete_multiple_accounts_confirmation">The contacts to be deleted have details from multiple accounts. Details from read-only accounts will be hidden, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete details from multiple accounts.</string>
    <string name="deleteConfirmation">Delete this contact?</string>
    <string name="deleteConfirmation_positive_button">Delete</string>
    <string name="invalidContactMessage">The contact doesn\'t exist.</string>
    <string name="createContactShortcutSuccessful_NoName">Contact added to Home screen.</string>
    <string name="createContactShortcutSuccessful"><xliff:g id="name">%s</xliff:g> added to Home screen.</string>
    <string name="photoPickerNotFoundText">No pictures are available on the device.</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="removePhoto">Remove photo</string>
    <string name="noContacts">Your contacts list is empty</string>
    <string name="emptyGroup">No contacts with this label</string>
    <string name="emptyAccount">No contacts in this account</string>
    <string name="emptyMainList">Your contacts list is empty</string>
    <string name="contactSavedNamedToast"><xliff:g id="display_name">%s</xliff:g> saved</string>
    <string name="contactSavedToast">Contact saved</string>
    <string name="contactUnlinkedToast">Contacts unlinked</string>
    <string name="contactSavedErrorToast">Couldn\'t save contact changes</string>
    <string name="contactUnlinkErrorToast">Couldn\'t unlink contact</string>
    <string name="contactJoinErrorToast">Couldn\'t link contact</string>
    <string name="contactGenericErrorToast">Error saving contact</string>
    <string name="contactPhotoSavedErrorToast">Couldn\'t save contact photo changes</string>
    <string name="groupLoadErrorToast">Failed to load label</string>
    <string name="groupDeletedToast">Label deleted</string>
    <string name="groupCreatedToast">Label created</string>
    <string name="groupCreateFailedToast">Can\'t create label</string>
    <string name="groupUpdatedToast">Label updated</string>
    <string name="groupMembersRemovedToast">Removed from label</string>
    <string name="groupMembersAddedToast">Added to label</string>
    <string name="groupSavedErrorToast">Couldn\'t save label changes</string>
    <string name="groupExistsErrorMessage">That label already exists</string>
    <string name="groupSomeContactsNoEmailsToast">Some contacts do not have emails.</string>
    <string name="groupSomeContactsNoPhonesToast">Some contacts do not have phone numbers.</string>
    <string name="menu_sendEmailOption">Send email</string>
    <string name="menu_sendMessageOption">Send message</string>
    <string name="pickerSelectContactsActivityTitle">Choose Contacts</string>
    <string name="send_to_selection">Send</string>
    <string name="listFoundAllContactsZero">No contacts</string>
    <string name="add_contact_dlg_message_fmt">Add \"<xliff:g id="email">%s</xliff:g>\" to contacts?</string>
    <string name="search_settings_description">Names of your contacts</string>
    <string name="quickcontact_transparent_view_description">Click to return to previous screen</string>
    <string name="quickcontact_add_phone_number">Add phone number</string>
    <string name="quickcontact_add_email">Add email</string>
    <string name="missing_app">No app was found to handle this action.</string>
    <string name="menu_share">Share</string>
    <string name="menu_add_contact">Add to contacts</string>
    <string name="menu_add_contacts">Add</string>
    <plurals name="title_share_via">
        <item quantity="one">Share contact via</item>
        <item quantity="other">Share contacts via</item>
    </plurals>
    <string name="dialog_new_group_account">Choose account</string>
    <string name="group_name_dialog_insert_title">Create label</string>
    <string name="group_name_dialog_update_title">Rename label</string>
    <string name="group_name_dialog_hint">Label name</string>
    <string name="label_name_dialog_hint">Label name</string>
    <string name="audio_chat">Voice chat</string>
    <string name="video_chat">Video chat</string>
    <string name="account_type_format"><xliff:g id="source" example="Gmail">%1$s</xliff:g> contact</string>
    <string name="google_account_type_format"><xliff:g id="source" example="Google">%1$s</xliff:g> account</string>
    <string name="take_photo">Take photo</string>
    <string name="take_new_photo">Take new photo</string>
    <string name="menu_export_database">Export database files</string>
    <string name="import_export_contacts">Import/Export contacts</string>
    <string name="display_options_sort_list_by">Sort by</string>
    <string name="display_options_phonetic_name_fields">Phonetic name</string>
    <string name="display_options_view_names_as">Name format</string>
    <string name="settings_accounts">Accounts</string>
    <string name="default_editor_account">Default account for new contacts</string>
    <string name="settings_my_info_title">My info</string>
    <string name="setting_about">About Contacts</string>
    <string name="menu_contacts_filter">Contacts to display</string>
    <string name="hint_findContacts">Search contacts</string>
    <string name="menu_blocked_numbers">Blocked numbers</string>
    <string name="contacts_select_all">Select all</string>
    <string name="contacts_cancel_all">Cancel all</string>
    <string name="menu_share_by_sms">Send contacts by Messaging</string>
    <string name="sim_capacity">SIM capacity</string>
    <string name="clearup_contacts">Clear up contacts</string>
    <string name="settings_accounts_category">Accounts</string>
    <string name="settings_general_category">General</string>
</resources>