<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- SPRD: Bug721316 add category to contacts settings activity -->
    <PreferenceCategory
        android:key="accountsCategory"
        android:title="@string/settings_accounts_category">

        <Preference
            android:icon="@null"
            android:key="myInfo"
            android:title="@string/settings_my_info_title"/>

        <Preference
            android:icon="@null"
            android:key="accounts"
            android:title="@string/settings_accounts">
        </Preference>

        <com.android.contacts.preference.DefaultAccountPreference
            android:icon="@null"
            android:key="defaultAccount"
            android:title="@string/default_editor_account"
            android:dialogTitle="@string/default_editor_account" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="generalCategory"
        android:title="@string/settings_general_category">

        <Preference
            android:icon="@null"
            android:key="customContactsFilter"
            android:title="@string/menu_contacts_filter"/>

        <com.android.contacts.preference.SortOrderPreference
            android:icon="@null"
            android:key="sortOrder"
            android:title="@string/display_options_sort_list_by"
            android:dialogTitle="@string/display_options_sort_list_by" />

        <com.android.contacts.preference.DisplayOrderPreference
            android:dialogTitle="@string/display_options_view_names_as"
            android:icon="@null"
            android:key="displayOrder"
            android:title="@string/display_options_view_names_as"/>

        <com.android.contacts.preference.PhoneticNameDisplayPreference
            android:dialogTitle="@string/display_options_phonetic_name_fields"
            android:icon="@null"
            android:key="phoneticNameDisplay"
            android:title="@string/display_options_phonetic_name_fields"/>

        <Preference
            android:icon="@null"
            android:key="menu_import_export"
            android:title="@string/import_export_contacts"/>

        <Preference
            android:icon="@null"
            android:key="blockedNumbers"
            android:title="@string/menu_blocked_numbers"/>
        <!-- androido-porting bug 474752 Add features with multiSelection activity in Contacts  -->
        <Preference
            android:icon="@null"
            android:key="send"
            android:title="@string/menu_share_by_sms"/>

        <!-- SPRD: add for bug474772, display SIM capacity -->
        <Preference
            android:icon="@null"
            android:key="simCapacity"
            android:title="@string/sim_capacity"/>

        <!-- androido-porting bug 474742,693206 add clearup contacts feature -->
        <Preference
            android:icon="@null"
            android:key="clearup_contacts"
            android:title="@string/clearup_contacts"/>
    </PreferenceCategory>

    <Preference
        android:icon="@null"
        android:key="about"
        android:order="@integer/about_contacts_order_number"
        android:title="@string/setting_about"/>
</PreferenceScreen>
