<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:contacts="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/quantum_ic_search_vd_theme_24"
        android:title="@string/hint_findContacts"
        contacts:showAsAction="always" />

    <item
        android:id="@+id/export_database"
        android:title="@string/menu_export_database"
        android:visible="false"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/quantum_ic_share_vd_theme_24"
        android:title="@string/menu_share"
        contacts:showAsAction="always"/>

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/quantum_ic_delete_vd_theme_24"
        android:title="@string/menu_deleteContact"
        contacts:showAsAction="always"/>
    <!-- UNISOC: modify for bug 1186205，Click on the menu select all flashed cancel all-->
    <item
        android:id="@+id/menu_join"
        android:icon="@drawable/quantum_ic_link_vd_theme_24"
        android:title="@string/menu_joinAggregate"
        contacts:showAsAction="never"/>

     <!-- androido-porting bug 474752 Add features with multiSelection activity in Contacts  -->
    <item
        android:id="@+id/menu_contacts_select_all"
        android:title="@string/contacts_select_all"
        android:visible="false"/>

    <item
        android:id="@+id/menu_contacts_cancel_all"
        android:title="@string/contacts_cancel_all"
        android:visible="false"/>

</menu>
